--- a/css/moonstone-variables.less
+++ b/css/moonstone-variables.less
@@ -182,8 +182,9 @@
 
 /* IntegerPicker */
 /* ---------------------------------------*/
-@moon-integer-picker-radius: 30px;
+@moon-integer-picker-radius: 9999px;
 @moon-integer-picker-height: 92px;
+@moon-integer-picker-overlay-height: 30px;
 @moon-integer-picker-shadow-width: 6px;
 
 /* Grid Dimensions */
